[package]
name = "dpuse-tool-rust-csv-core"
version = "0.1.0"
edition = "2024"
authors = ["Data Positioning <info@dpuse.app>"]
license = "MIT"
description = "CSV parsing core with streaming support"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-streams = "0.4"
futures = "0.3"
csv-core = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
